fix old logic
