# internal/handler/auth.go
@@ -1,11 +1,9 @@
 package handler
 
 import (
-	"context"
 	"fmt"
 	"strings"
 
-	"github.com/G0tem/go-servise-auth/internal"
 	"github.com/G0tem/go-servise-auth/internal/model"
 	"github.com/G0tem/go-servise-auth/internal/types"
 	"github.com/gofiber/fiber/v2"
@@ -160,11 +158,6 @@ func (h *Handler) register(c *fiber.Ctx) error {
 		})
 	}
 
-	err = h.SendEmailConfirm(&user, input.Password)
-	if err != nil {
-		log.Error().Msgf("SendEmailConfirm error %v", err)
-	}
-
 	token, err := h.GetJWT(&user)
 	if err != nil {
 		return c.Status(fiber.StatusInternalServerError).JSON(types.FailureErrorResponse{
@@ -315,266 +308,6 @@ func (h *Handler) refresh(c *fiber.Ctx) error {
 	return c.Status(fiber.StatusOK).JSON(types.LoginSuccessResponse{
 		Status: "ok",
 		Data:   types.LoginSuccessData{Token: newToken},
-	})
-}
-
-// Password Reset
-// @Summary Password Reset
-// @Description Send link to email for reset password
-// @Tags auth
-// @Accept json
-// @Produce json
-// @Param request body types.PasswordChangeResetRequest true "password reset"
-// @Success 200 {object} types.SuccessResponse
-// @Failure 400 {object} types.FailureResponse
-// @Failure 500 {object} types.FailureErrorResponse
-// @Router /auth/password/reset [post]
-func (h *Handler) passwordReset(c *fiber.Ctx) error {
-	var (
-		user model.User
-	)
-
-	input := new(types.PasswordChangeResetRequest)
-
-	if err := c.BodyParser(input); err != nil {
-		return c.Status(fiber.StatusBadRequest).JSON(types.FailureErrorResponse{
-			Status:  "error",
-			Message: "Error on password reset request",
-			Error:   err.Error(),
-		})
-	}
-
-	// Find user by email
-	tx := h.db.Find(&user, "Email = ?", input.Email)
-	if err := tx.Error; err != nil {
-		return c.Status(fiber.StatusInternalServerError).JSON(types.FailureErrorResponse{
-			Status:  "error",
-			Message: "Internal server error (passwordReset())",
-			Error:   err.Error(),
-		})
-	}
-
-	if user.ID == uuid.Nil {
-		return c.Status(fiber.StatusInternalServerError).JSON(types.FailureErrorResponse{
-			Status:  "error",
-			Message: "Internal server error (user not found)",
-			Error:   fmt.Sprintf("user with email %v not found", input.Email),
-		})
-	}
-
-	err := h.SendPasswordResetConfirm(&user)
-	if err != nil {
-		return c.Status(fiber.StatusInternalServerError).JSON(types.FailureErrorResponse{
-			Status:  "error",
-			Message: "Internal Server Error (h.SendPasswordResetConfirm())",
-			Error:   err.Error(),
-		})
-	}
-
-	return c.Status(fiber.StatusOK).JSON(types.SuccessResponse{
-		Status:  "ok",
-		Message: "Sent email for password reset.",
-	})
-}
-
-// Password Reset Confirm
-// @Summary Password Reset Confirm
-// @Description Password Reset Confirm
-// @Tags auth
-// @Accept json
-// @Produce json
-// @Param request body types.PasswordChangeResetConfirmRequest true "password reset confirm"
-// @Success 200 {object} types.SuccessResponse
-// @Failure 400 {object} types.FailureResponse
-// @Failure 500 {object} types.FailureErrorResponse
-// @Router /auth/password/reset/confirm [post]
-func (h *Handler) passwordResetConfirm(c *fiber.Ctx) error {
-	var (
-		user model.User
-	)
-
-	input := new(types.PasswordChangeResetConfirmRequest)
-
-	if err := c.BodyParser(input); err != nil {
-		return c.Status(fiber.StatusBadRequest).JSON(types.FailureErrorResponse{
-			Status:  "error",
-			Message: "Error on password reset request",
-			Error:   err.Error(),
-		})
-	}
-
-	if input.NewPassword != input.NewPasswordConfirm {
-		return c.Status(fiber.StatusBadRequest).JSON(types.FailureResponse{
-			Status:  "error",
-			Message: "New password and new confirm password must be same",
-		})
-	}
-
-	jwtToken, err := jwt.Parse(input.Token, nil)
-	if jwtToken == nil {
-		return c.Status(fiber.StatusInternalServerError).JSON(types.FailureErrorResponse{
-			Status:  "error",
-			Message: "Failed to parse jwt token",
-			Error:   err.Error(),
-		})
-	}
-
-	claimsMap := jwtToken.Claims.(jwt.MapClaims)
-	claims := &types.JwtClaims{
-		Email: fmt.Sprint(claimsMap["email"]),
-	}
-
-	tx := h.db.Where("email = ?", claims.Email).First(&user)
-	if err := tx.Error; err != nil {
-		return c.Status(fiber.StatusInternalServerError).JSON(types.FailureErrorResponse{
-			Status:  "error",
-			Message: "Internal server error (passwordReset())",
-			Error:   err.Error(),
-		})
-	}
-
-	hashedNewPassword, err := bcrypt.GenerateFromPassword([]byte(input.NewPassword), bcrypt.DefaultCost)
-
-	if err != nil {
-		return c.Status(fiber.StatusInternalServerError).JSON(types.FailureErrorResponse{
-			Status:  "error",
-			Message: "Failed to hash password",
-			Error:   err.Error(),
-		})
-	}
-
-	tx = h.db.Model(&user).Update("PasswordHash", string(hashedNewPassword))
-	if err := tx.Error; err != nil {
-		return c.Status(fiber.StatusInternalServerError).JSON(types.FailureErrorResponse{
-			Status:  "error",
-			Message: "Internal server error (Update PasswordHash)",
-			Error:   err.Error(),
-		})
-	}
-
-	log.Info().Msgf("Sending notification to user service about password change with new password")
-	// Notify external service about password change with new password
-	h.userService.OnUpdateUser(&UserCredentials{
-		Email:    user.Email,
-		Password: input.NewPassword,
-	})
-
-	return c.Status(fiber.StatusOK).JSON(types.SuccessResponse{
-		Status:  "ok",
-		Message: "New password set, after reset.",
-	})
-}
-
-// Email Confirm
-// @Summary Email Confirm
-// @Description Email confirm via emailed link
-// @Tags auth
-// @Produce json
-// @Param string query string false "string valid" minlength(100) maxlength(100) extensions(x-nullable,x-abc=def)
-// @Success 302 {object} types.SuccessResponse
-// @Failure 400 {object} types.FailureResponse
-// @Failure 500 {object} types.FailureErrorResponse
-// @Router /auth/email/confirm [get]
-func (h *Handler) emailConfirmFromExternalLink(c *fiber.Ctx) error {
-	params := c.Queries()
-	log.Info().Msgf("Email confirmation params: %v", params)
-	if len(params) != 1 {
-		log.Error().Msgf("only one parameter required but given %v", params)
-		return c.Redirect(h.GetPublicErrorUrl())
-	}
-
-	// Get confirmation request with user data
-	var confirmation model.EmailConfirmation
-	tx := h.db.Preload("User").First(&confirmation, "Token = ?", internal.FirstKey(params))
-	if tx.Error != nil {
-		log.Error().Err(tx.Error).Msg("Failed to get confirmation request")
-		return c.Redirect(h.GetPublicErrorUrl())
-	}
-
-	token := internal.FirstKey(params)
-
-	err := h.ConfirmEmailBySlug(token)
-	if err != nil {
-		log.Error().Msgf("Internal Server Error (h.ConfirmEmailBySlug()): %v", err)
-		return c.Redirect(h.GetPublicErrorUrl())
-	}
-
-	log.Info().Msgf("Sending notification to user service about confirmed user with original password")
-	// Notify external service about confirmed user with original password
-	var ctx = context.Background()
-	password, err := h.redis.Get(ctx, token).Result()
-	if err != nil {
-		log.Error().Msgf("Error retrieving password from Redis: %v", err)
-		return c.Redirect(h.GetPublicErrorUrl())
-	}
-	h.userService.OnCreateUser(&UserCredentials{
-		Email:    confirmation.User.Email,
-		Password: password,
-	})
-
-	return c.Status(fiber.StatusOK).JSON(fiber.Map{
-		"message": h.GetPublicUrl(),
-		"status":  "ok",
-	})
-}
-
-// Email Resend Confirm
-// @Summary Email Resend Confirm
-// @Description Send email message with email confirmation link
-// @Tags auth
-// @Accept json
-// @Produce json
-// @Param request body types.ResendEmailConfirmationRequest true "email resend confirm"
-// @Success 200 {object} types.SuccessResponse
-// @Failure 400 {object} types.FailureResponse
-// @Failure 500 {object} types.FailureErrorResponse
-// @Router /auth/register/resend-confirm-email [post]
-func (h *Handler) emailResendConfirm(c *fiber.Ctx) error {
-
-	var (
-		user model.User
-	)
-
-	input := new(types.ResendEmailConfirmationRequest)
-
-	if err := c.BodyParser(input); err != nil {
-		return c.Status(fiber.StatusBadRequest).JSON(types.FailureErrorResponse{
-			Status:  "error",
-			Message: "Error on password reset request",
-			Error:   err.Error(),
-		})
-	}
-
-	// Find user by email
-	tx := h.db.Find(&user, "Email = ?", input.Email)
-	if err := tx.Error; err != nil {
-		return c.Status(fiber.StatusInternalServerError).JSON(types.FailureErrorResponse{
-			Status:  "error",
-			Message: "Internal server error (passwordReset())",
-			Error:   err.Error(),
-		})
-	}
-
-	if user.ID == uuid.Nil {
-		return c.Status(fiber.StatusInternalServerError).JSON(types.FailureErrorResponse{
-			Status:  "error",
-			Message: "Internal server error (user not found)",
-			Error:   fmt.Sprintf("user with email %v not found", input.Email),
-		})
-	}
-
-	err := h.SendEmailConfirm(&user, "")
-	if err != nil {
-		return c.Status(fiber.StatusInternalServerError).JSON(types.FailureErrorResponse{
-			Status:  "error",
-			Message: "Internal Server Error (h.SendEmailConfirm())",
-			Error:   err.Error(),
-		})
-	}
-
-	return c.Status(fiber.StatusOK).JSON(types.SuccessResponse{
-		Status:  "ok",
-		Message: "Email confirmation sent",
 	})
 }
 
